--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -1158,6 +1158,11 @@
 
   .dashboard-investment-row {
     margin-top: 35px;
+    
+    &.grey-bg {
+      padding: 15px;
+      background-color: #ebebeb;
+    }
 
     &:last-child {
       margin-top: 0;
@@ -1177,7 +1182,7 @@
     border-radius: 5px 0 0  5px;
     outline: none;
     padding: 15px;
-    background: none !important;
+    background: #fff !important;
   }
 
   .file {
@@ -1456,7 +1461,7 @@
     margin: 0 auto;
 
     .terms-row {
-      padding: 10px 25px 10px 95px;
+      padding: 10px 25px 10px 70px;
       border-radius: 5px;
       margin: 5px 0;
 
@@ -1466,20 +1471,20 @@
       }
       
       &.error {
-        background-color: #ffffa6;
+        background-color: #def5f6;
         position: relative;
 
         &:before {
           content: '!';
           display: block;
-          width: 40px;
-          height: 40px;
-          background-color: #f33;
+          width: 28px;
+          height: 28px;
+          background-color: #d45155;
           border-radius: 50%;
           color: #ffffa6;
           text-align: center;
-          line-height: 40px;
-          font-size: 30px;
+          line-height: 28px;
+          font-size: 20px;
           left: 25px;
           @include center-vertical;
 
@@ -1672,3 +1677,66 @@
     }
   }
 }
+
+/*
+.cntr {
+  text-align: center;
+  height: 21px;
+
+  .btn-radio {
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
+    margin: 0;
+    height: 21px;
+
+    svg {
+      fill: none;
+      vertical-align: middle;
+
+      circle {
+        stroke-width: 2;
+        stroke: #b7b7b7;
+      }
+
+      path {
+        stroke: $main-color;
+
+        &.inner {
+          stroke-width: 6;
+          stroke-dasharray: 19;
+          stroke-dashoffset: 19;
+        }
+
+        &.outer {
+          stroke-width: 2;
+          stroke-dasharray: 57;
+          stroke-dashoffset: 57;
+        }
+      }
+    }
+
+    input {
+      display: none;
+
+      &:checked + svg path {
+        transition: all 0.4s ease;
+
+        &.inner {
+          stroke-dashoffset: 38;
+          transition-delay: 0.3s;
+        }
+
+        &.outer {
+          stroke-dashoffset: 0;
+        }
+      }
+    }
+
+    span {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+  }
+}*/
