--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -720,3 +720,7 @@ input[type=date]::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance:textfield;
 }
+
+*:focus {
+  outline: none;
+}
